<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24pt" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="onStartClick"
        android:text="@string/start" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onOptionsClick"
        android:text="@string/options" />

    <Button
        android:id="@+id/hiscores_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onHiscoresClick"
        android:text="@string/hiscores" />

</LinearLayout>